# anna_portfolio

AI_Chatbot-Hiking_assistant/: app.py  fwi_tools.py  hiking_tools.py  main.py  nature.txt  prompt.py  readme.md  weather_tools.py
Machine_learning_based_wildfire_ignition_risk_prediction_for_Ontario/: README.md  pyproject.toml
Machine_learning_based_wildfire_ignition_risk_prediction_for_Ontario/notebooks/: Fire_cause_frequency.ipynb  Spatial_ignition_aggregated_confusion_matrix_2_days_comparison.ipynb  Spatial_ignition_confusion_matrix_2_day_comparison.ipynb  Visualization_land_cover.ipynb
Machine_learning_based_wildfire_ignition_risk_prediction_for_Ontario/src/convlstm/: Conv_LSTM.ipynb
Machine_learning_based_wildfire_ignition_risk_prediction_for_Ontario/src/data_preparation/: Data_Extraction.ipynb  Dynamic_Features_Monthly_Stack_Export.ipynb  Static_Features_Yearly_Static_Export.ipynb
Machine_learning_based_wildfire_ignition_risk_prediction_for_Ontario/src/random_forest/: Random_Forest_Ignition_and_Cause_Models.ipynb
Machine_learning_based_wildfire_ignition_risk_prediction_for_Ontario/src/xgboost/: Test_evaluation_2023-2024.ipynb  XGBoost_Cause_Models.ipynb  XGBoost_Ignition_Aggregated_Model.ipynb  XGBoost_Ignition_CV_threshold.ipynb  XGBoost_Ignition_Optuna_tuning.ipynb  XGBoost_Ignition_SMOTE_ratio_testing.ipynb
