[project]
name = "ru-thesis-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdsapi>=0.7.7",
    "earthengine-api>=1.7.19",
    "geemap>=0.37.2",
    "geopandas>=1.1.3",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "xarray>=2026.2.0",
]
